feat(hgncgenes): make hgnc gene file configurable via environment properties

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,6 +2,8 @@
 camel.springboot.name=VKGL
 # how long the application should wait for the file to complete
 completion.timeout=5000
+#hgnc genes test file
+hgnc.genes=src/test/resources/hgnc_genes.tsv
 # to automatic shutdown the JVM after a period of time
 #camel.springboot.duration-max-seconds=60
 #camel.springboot.duration-max-messages=100
