Increase completion.timeout 60s->300s, set connectTimeout/socketTimeout

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # the name of Camel
 camel.springboot.name=VKGL
 # how long the application should wait for the file to complete
-completion.timeout=60000
+completion.timeout=300000
 # to automatic shutdown the JVM after a period of time
 #camel.springboot.duration-max-seconds=60
 #camel.springboot.duration-max-messages=100
@@ -19,3 +19,6 @@ management.endpoint.camelroutes.read-only=true
 #logging.level.org.apache.camel.spring.boot = INFO
 #logging.level.org.apache.camel.impl = DEBUG
 #logging.level.sample.camel = DEBUG
+# HTTP component configuration
+connectTimeout=5000
+socketTimeout=30000
