--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,7 @@ management.endpoint.camelroutes.read-only=true
 #logging.level.org.apache.camel.impl = DEBUG
 #logging.level.sample.camel = DEBUG
 # HTTP component configuration
+connectionsPerRoute=1
+maxTotalConnections=1
 connectTimeout=5000
 socketTimeout=30000
