--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ management.endpoint.camelroutes.read-only=true
 #logging.level.org.apache.camel.impl = DEBUG
 #logging.level.sample.camel = DEBUG
 # HTTP component configuration
-connectionsPerRoute=1
-maxTotalConnections=1
-connectTimeout=5000
-socketTimeout=30000
+camel.component.http.connect-timeout=5000
+camel.component.http.socket-timeout=30000
+camel.component.http.max-total-connections=1
+camel.component.http.connections-per-route=1
