--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,4 @@ camel.component.http.connect-timeout=5000
 camel.component.http.socket-timeout=30000
 camel.component.http.max-total-connections=1
 camel.component.http.connections-per-route=1
+camel.springboot.shutdown-timeout=1
